--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "11ty Starter for Westborn",
   "main": ".eleventy.js",
   "scripts": {
-    "start": "npm run clean && clear && set ELEVENTY_ENV=development && npx eleventy --serve",
-    "production": "npm run clean && npx eleventy",
-    "debug": "DEBUG=Eleventy* npx @11ty/eleventy",
-    "clean": "rm -rf build"
+    "clean": "rm -rf _site src/css/styles.css src/images/90 src/images/80 src/images/70 src/images/60 src/images/50 src/images/40 src/images/30 src/images/20 src/images/10 src/images/webp",
+    "dev:tailwind": "postcss src/_includes/css/tailwind.css > src/_includes/css/styles.css",
+    "dev:11ty": "eleventy --serve",
+    "dev": "npm run dev:tailwind && npm run dev:11ty",
+    "build:img": "node scripts/sharp.js",
+    "build:tailwind": "set NODE_ENV=production&& postcss src/_includes/css/tailwind.css > src/_includes/css/styles.css",
+    "build:11ty": "set NODE_ENV=production&& eleventy",
+    "build": "npm run clean && npm run build:img && npm run build:tailwind && npm run build:11ty"
   },
   "keywords": [
     "11ty",
@@ -18,22 +22,22 @@
   "author": "George Stone",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0",
+    "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-navigation": "^0.1.6",
-    "@11ty/eleventy-plugin-rss": "^1.0.9",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "@tailwindcss/typography": "^0.2.0",
+    "autoprefixer": "^10.0.1",
+    "clean-css": "^4.2.3",
     "cssnano": "^4.1.10",
     "html-minifier": "^4.0.0",
-    "imagemin": "^7.0.1",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-pngquant": "^9.0.1",
-    "imagemin-svgo": "^8.0.0",
-    "inline-source": "^7.2.0",
-    "postcss": "^7.0.32",
-    "postcss-advanced-variables": "^3.0.1",
-    "postcss-nested": "^4.2.3",
-    "postcss-scss": "^2.1.1",
-    "rollup": "^2.26.11",
-    "rollup-plugin-terser": "^7.0.2"
-  },
-  "dependencies": {}
+    "jsdom": "^16.4.0",
+    "markdown-it": "^12.0.2",
+    "markdown-it-anchor": "^6.0.0",
+    "markdown-it-emoji": "^2.0.0",
+    "postcss": "^8.1.4",
+    "postcss-cli": "^8.1.0",
+    "sharp": "^0.26.2",
+    "simple-icons": "^3.12.1",
+    "tailwindcss": "^1.9.6"
+  }
 }
